Chnages in About Us page and Contact Us Page

--- a/src/ContactPage.css
+++ b/src/ContactPage.css
@@ -28,7 +28,7 @@
 
 .contact-page-content {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.5fr; /* Give more space to the form */
   gap: 50px;
   max-width: 1200px;
   margin: 0 auto;
@@ -53,10 +53,15 @@
   margin-bottom: 25px;
 }
 
+/* --- ICON STYLING UPDATED --- */
 .info-icon {
-  font-size: 1.5em;
-  margin-right: 20px;
   color: #e0a800;
+  margin-right: 20px;
+  margin-top: 3px; /* Align icon with the first line of text */
+}
+.info-icon svg {
+  width: 28px;
+  height: 28px;
 }
 
 .info-item div strong {
